# codex-gateway-rs

./: .gitignore  Cargo.toml  README.md
monitor/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
monitor/src/: App.tsx  index.css
monitor/src/components/ui/: badge.tsx  button.tsx  tabs.tsx
monitor/src/lib/: api.ts
src/: app.rs  auth.rs  cli.rs  codex.rs  config.rs  error.rs  main.rs  meter.rs  monitor.rs  scheduler.rs
src/db/: codex_keys.rs  connection.rs  members.rs  migrations.rs  mod.rs  models.rs  sessions.rs  time.rs  upstreams.rs  usage.rs  ws_connections.rs
src/proxy/: headers.rs  http.rs  mod.rs  policy.rs  upstream.rs  usage.rs  ws.rs
